--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
     <button id="fourthOption" onclick="guessFourth()"></button>
 </div>
 
+<div data-role="page" id="page3">
+    <div data-role="header" id="pageHeader3">
+        <h1>LYRICS TRIVIA</h1>
+    </div>
+    <div id="winMessage">You got it right! Congratulations!</div>
+</div>
+
+<div data-role="page" id="page4">
+    <div data-role="header" id="pageHeader4">
+        <h1>LYRICS TRIVIA</h1>
+    </div>
+    <div id="loseMessage"></div>
+</div>
 
 </body>
 </html>
