--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h1>LYRICS TRIVIA</h1>
     </div>
     <div id="winMessage">You got it right! Congratulations!</div>
-    <button id="nextSong3" onclick="backToFirst()">Next song</button>
+    <button id="nextSong3" onclick="backToSecond()">Next song</button>
 </div>
 
 <div data-role="page" id="page4" data-add-back-btn="true">
@@ -64,7 +64,7 @@
     <div id="loseMessage">Sorry, that's not right!</div>
     <div id="loseMessage2">The correct answer was</div>
     <div id="songName">eks dee</div>
-    <button id="nextSong4" onclick="backToFirst()">Next song</button>
+    <button id="nextSong4" onclick="backToSecond()">Next song</button>
 </div>
 
 </body>
