--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 </div>
 
 
-<div data-role="page" id="page2" data-add-back-btn="true">
-    <div data-role="header" id="pageHeader2" data-add-back-btn="true">
+<div data-role="page" id="page2">
+    <div data-role="header" id="pageHeader2">
         <h1>LYRICS TRIVIA</h1>
     </div>
     <div id="guessMessage">Guess the song</div>
@@ -50,8 +50,8 @@
     <button id="fourthOption" onclick="guessFourth()"></button>
 </div>
 
-<div data-role="page" id="page3" data-add-back-btn="true">
-    <div data-role="header" id="pageHeader3" data-add-back-btn="true">
+<div data-role="page" id="page3" >
+    <div data-role="header" id="pageHeader3">
         <h1>LYRICS TRIVIA</h1>
     </div>
     <div id="winMessage">You got it right! Congratulations!</div>
@@ -62,8 +62,8 @@
     <audio controls="true" src="" id="audio1" type="audio/m4a"></audio>
 </div>
 
-<div data-role="page" id="page4" data-add-back-btn="true">
-    <div data-role="header" id="pageHeader4" data-add-back-btn="true">
+<div data-role="page" id="page4">
+    <div data-role="header" id="pageHeader4">
         <h1>LYRICS TRIVIA</h1>
     </div>
     <div id="loseMessage">Sorry, that's not right!</div>
